lab1/Test/L1-A-6-77.output
Error Type B at Line 1
Error Type B at Line 2
Error Type B at Line 6
Error Type A at Line 7
Error Type B at Line 8
