lab1/Test/L1-A-6-77.cmm
int gBvbfPDo5CX5 ( {
  float UWPB [ ] [ 1322288614 ] , HIoN6Hl9IQvElrbJcrXn 
    = son8Sv7s1tnJ ;
}
struct {
  float wqhA0z 1255716184 ] = OGkbK , j ;
  int LMu5XSV4t4d , l #;
}N2kf5S9 ( ) int zfvjky_kN [ 519952065 ] [ 55302109 
  ] = rT9pzbVIWZxeI6X9vz , SiwiHZRUi ;
if ( gbIkXg_tTMU ) l ;
else if ( JyA7 ) if ( mMrAFK ) if ( dWBW14pw ) if 
  ( Kb3tX10pOqCpflyEWIQ ) if ( ckoZhg5ifEEHwm ) KDXApO1Ul 
  ;






if ( J9LyD2 ) J1p94 ;

}
